[package]
name = "diver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
hyper = "0.14.25"
rand = "0.8.5"
tokio = { version = "1.27.0", features = ["full"] }
tokio-timer = "0.2.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.2.2", features = ["derive", "cargo"] }

[lib]
name = "diver"
path = "src/lib.rs"

[[bin]]
name = "divercli"
path = "src/diver.rs"
